--- a/package.json
+++ b/package.json
@@ -6,11 +6,10 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
-    "express": "^4.17.1",
+    "axios": "^0.21.1",
     "firebase": "^8.2.10",
     "lodash.memoize": "^4.1.2",
     "node-sass": "^5.0.0",
-    "nodemailer": "^6.5.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.3",
@@ -59,7 +58,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "nodemon": "^2.0.7"
-  }
+  "devDependencies": {}
 }
